2007-03-23  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by adele

        <rdar://problem/5078739> 
        Crash in in ReplaceSelectionCommand if the fragment contains only a style span

        * editing/pasteboard/5078739-expected.txt: Added.
        * editing/pasteboard/5078739.html: Added.

2007-03-23  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin

        Fixed (was missing a newline):
        * editing/execCommand/4917055-expected.txt:
        Tests setting a caet before the image and changing its alignment:
        * editing/execCommand/5080333-1-expected.checksum: Added.
        * editing/execCommand/5080333-1-expected.png: Added.
        * editing/execCommand/5080333-1-expected.txt: Added.
        * editing/execCommand/5080333-1.html: Added.
        Tests selecting the image and changing its alignment:
        * editing/execCommand/5080333-2-expected.checksum: Added.
        * editing/execCommand/5080333-2-expected.png: Added.
        * editing/execCommand/5080333-2-expected.txt: Added.
        * editing/execCommand/5080333-2.html: Added.

2007-03-23  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Tests for <rdar://problem/5080428> REGRESSION: getting value for hidden input element fails after the fix for Bug 11866
        http://bugs.webkit.org/show_bug.cgi?id=13121

        * fast/dom/HTMLInputElement/input-hidden-value-expected.txt: Added.
        * fast/dom/HTMLInputElement/input-hidden-value.html: Added.
        * fast/forms/input-value-expected.txt:

2007-03-23  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13157
          List markers positioned incorrectly and don't repaint properly on Oxford homepage

        * fast/lists/marker-image-error-expected.checksum: Added.
        * fast/lists/marker-image-error-expected.png: Added.
        * fast/lists/marker-image-error-expected.txt: Added.